--- a/streamwebs_frontend/streamwebs/templates/streamwebs/site_detail.html
+++ b/streamwebs_frontend/streamwebs/templates/streamwebs/site_detail.html
@@ -30,19 +30,20 @@
 {% endif %}
 
 <!-- site info -->
+<h3 align="center">{{ site.site_name }}</h3>
 <div class="row">
-        <div class="col s12 m6 center-align">
-            {% if site.image %}
-            <img src="{{ site.image.url }}" alt="site image" />
-            {% else %}
-            <img src="{% static 'streamwebs/images/img-default.jpg' %}" alt="site image" />
-            {% endif %}
-        </div>
-        <div class="col s12 m6 center-align">
-            <p>{{ site.description }}</p>
-            <p>Created: {{ site.created|date:"m-d-Y H:i T" }}</p>
-            <p>Last modified: {{ site.modified|date:"m-d-Y H:i T" }}</p>
-        </div>
+    <div class="col s12 m6 center-align">
+        {% if site.image %}
+        <img src="{{ site.image.url }}" alt="site image" />
+        {% else %}
+        <img src="{% static 'streamwebs/images/img-default.jpg' %}" alt="site image" />
+        {% endif %}
+    </div>
+    <div class="col s12 m6 center-align">
+        <p>{{ site.description }}</p>
+        <p>Created: {{ site.created|date:"m-d-Y H:i T" }}</p>
+        <p>Last modified: {{ site.modified|date:"m-d-Y H:i T" }}</p>
+    </div>
 </div>
 <div class="row">
     <div class="col s12 m2 graphs center-align">
