--- a/streamwebs_frontend/streamwebs/templates/streamwebs/index.html
+++ b/streamwebs_frontend/streamwebs/templates/streamwebs/index.html
@@ -25,11 +25,11 @@
 
 <div class="container">
   {% block content %}
-      <div class="section no-pad-bot" id="index-banner">
+      <!--<div class="section no-pad-bot" id="index-banner">-->
         <div id="banner-text" class="center-align">
           <h4>Student Stewardship Network</h4>
         </div>
-      </div>
+      <!--</div>-->
       <br>
       <div class="container">
         <div class="h-img" style="transform: rotate(-2deg)">
