--- a/streamwebs_frontend/streamwebs/templates/streamwebs/admin/stats.html
+++ b/streamwebs_frontend/streamwebs/templates/streamwebs/admin/stats.html
@@ -5,6 +5,14 @@
 {% block title %} StreamWebs Statistics {% endblock %}
 {% block body_title %} StreamWebs Statistics {% endblock %}
 
+{% block scripts %}
+<script type="application/javascript">
+  const sheet_data = {{ data|safe }};
+  const page_count = {{ pages }}
+</script>
+<script type="application/javascript" src="{% static 'streamwebs/js/site_detail.js' %}"></script>
+{% endblock %}
+
 {% block content %}
 <form id='stats_form' method='post'>
     {% csrf_token %}
@@ -12,28 +20,60 @@
     <input type='submit' name='submit' value='{% trans 'Calculate' %}'/>
 </form>
 
-{% if all_time %}
-Users who have logged in within the last 3 years: {{ users.count }}
-{% else %}
-Users who joined between {{ start }} and {{ end }}: {{ users.count }}
-{% endif %}
-{% for user in users.users %}
-    <li>{{ user.username }}</li>
-{% endfor %}
+<br>
+<div class="card-panel teal lighten-5">
+  {% if all_time %}
+  Users who have logged in within the last 3 years: {{ users.count }} <br>
+  {% else %}
+  Users who joined between {{ start }} and {{ end }}: {{ users.count }}
+  <ul class="collection">
+    {% for user in users.users %}
+      <li class="collection-item">{{ user.username }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+</div>
 
-Number of data sheets uploaded between {{ start }} and {{ end }}:
-{% for type, num in sheets.items %}
-<li> {{ type }}: {{ num }}</li>
-{% endfor %}
+<div class="card-panel teal lighten-4">
+  Number of data sheets uploaded between {{ start }} and {{ end }}:
+  <ul class="collection">
+  {% for type, num in sheets.items %}
+    <li class="collection-item">{{ type }}: {{ num }}</li>
+  {% endfor %}
+  </ul>
+</div>
 
-Schools that uploaded data between {{ start }} and {{ end }}: {{ schools.total }}
-{% for school in schools.schools %}
-<li> {{ school.name }} </li>
-{% endfor %}
+<div class="card-panel teal lighten-3">
+  Schools that uploaded data between {{ start }} and {{ end }}: {{ schools.total }} <br>
+  {% if schools.total > 0 %}
+  <ul class="collection">
+    {% for school in schools.schools %}
+      <li class=collection-item> {{ school.name }} </li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+</div>
 
-Sites that uploaded data between {{ start }} and {{ end }}: {{ sites.total }}
-{% for site in sites.sites %}
-<li>{{ site.site_name }}</li>
-{% endfor %}
+<div class="card-panel teal lighten-2">
+  Sites that uploaded data between {{ start }} and {{ end }}: {{ sites.total }}
+  {% if sites.total > 0 %}
+    <ul class="collection" id="site-list">
+    </ul>
+    <ul class="pagination">
+      <li id="first-page" class="disabled"><a href="#1">
+        <i class="material-icons">fast_rewind</i>
+      </a></li>
+      <li id="page-1" class="page-select waves-effect"><a href="#1">1</a></li>
+      {% for i in data_len_range %}
+        <li id="page-{{ i }}" class="page-select waves-effect">
+            <a href="#{{ i }}">{{ i }}</a>
+        </li>
+      {% endfor %}
+      <li id="last-page" class="disabled"><a href={{ pages }}>
+        <i class="material-icons">fast_forward</i>
+      </a></li>
+    </ul>
+    {% endif %}
+</div>
 
 {% endblock %}
