Sites have maps, and can drag on them, zoom in and out, and even go to street view if they so please

--- a/streamwebs_frontend/streamwebs/templates/streamwebs/site_detail.html
+++ b/streamwebs_frontend/streamwebs/templates/streamwebs/site_detail.html
@@ -17,7 +17,8 @@
     const page_count = {{ pages }};
 </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key={{ maps_api }}"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIz
+aSyBV71HBuAFMtHEAaSEVpRDPUQyGvJwTX1k"></script>
 <script type="application/javascript" src="{% static 'streamwebs/js/site_detail.js' %}"></script>
 {% endblock %}
 
