Make initial change to canopy_cover, change edit to add, adding new function canopy_cover_edit to general.py

--- a/streamwebs_frontend/streamwebs/templates/streamwebs/site_detail.html
+++ b/streamwebs_frontend/streamwebs/templates/streamwebs/site_detail.html
@@ -169,7 +169,7 @@
               </a>
             </li>
             <li>
-              <a href="{% url 'streamwebs:canopy_cover_edit' site.site_slug %}">
+              <a href="{% url 'streamwebs:canopy_cover_add' site.site_slug %}">
                 {% trans "Canopy Cover Survey" %}
               </a>
             </li>
